--- a/Market/Reportes/ReporteListaProducto.rdlc
+++ b/Market/Reportes/ReporteListaProducto.rdlc
@@ -223,7 +223,9 @@
                               <Style />
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Producto_id</rd:DefaultName>
@@ -343,7 +345,9 @@
                               <Style />
                             </TextRun>
                           </TextRuns>
-                          <Style />
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
                         </Paragraph>
                       </Paragraphs>
                       <rd:DefaultName>Empaque</rd:DefaultName>
